ubiquity (1.11.4) UNRELEASED; urgency=low

  [ Mario Limonciello ]
  * Don't reinvent the square with mythbuntu autologin.  It's provided 
    by user-setup, so use it there.
  * Only start mythtv upon login if we are a frontend install.
  * Eliminate mythbuntu_summary.py, and instead merge it into
    mythbuntu_install.py

 -- Mario Limonciello <superm1@ubuntu.com>  Wed, 14 Jan 2009 21:52:30 -0600

ubiquity (1.11.3) jaunty; urgency=low

  [ Colin Watson ]
  * Correct Bazaar link in debian/copyright, really this time.
  * Update copyright years.
  * Fetch subarchitecture in remove_extras (LP: #316446).

  [ Evan Dandrea ]
  * Fix the edit partition dialog by properly preseeding
    partman/active_partition.
  * Add support for encrypting the home directory to the gtk frontend.
  * Automatic update of included source packages: apt-setup
    1:0.37ubuntu8, partconf 1.30ubuntu1.

  [ Mario Limonciello ]
  * Reset random mysql password on every ubiquity mythbuntu invocation.
  * Don't set anything in the mythbuntu_summary step.
  * Transition apply-type code into python to be called directly from
    mythbuntu_install.py instead.
    - Along with this, handling for leaving files when not reformatting
      /home should be fixed. (LP: #305236)
    - Mythweb acl to SQL should be fixed now, but not necessarily
      authentication.

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 13 Jan 2009 21:28:32 -0500

ubiquity (1.11.2) jaunty; urgency=low

  * Adjust for changes in tzsetup 1:0.24ubuntu1.
  * Correct Bazaar link in debian/copyright (pointed out by shirish).
  * Make sure that only one of grub and lilo is installed (LP: #314004).
  * Add ext4 support (LP: #293465).
  * Automatic update of included source packages: apt-setup 1:0.37ubuntu7,
    hw-detect 1.71ubuntu3, partconf 1.30build1, partman-auto 83ubuntu2,
    partman-base 128ubuntu4, partman-ext3 55ubuntu2, partman-partitioning
    64ubuntu2, partman-target 58ubuntu2, tzsetup 1:0.24ubuntu1, user-setup
    1.23ubuntu6.
