@@ -6,6 +6,7 @@ ubiquity (1.11.4) UNRELEASED; urgency=low
   * Only start mythtv upon login if we are a frontend install.
   * Eliminate mythbuntu_summary.py, and instead merge it into
     mythbuntu_install.py
+  * Merge in some additional errno handling from original install.py
 
  -- Mario Limonciello <superm1@ubuntu.com>  Wed, 14 Jan 2009 21:52:30 -0600
 
